[package]
name = "pumlformat"
version = "0.1.0"
edition = "2024"
authors = ["James Hu <huleiak47@gmail.com>"]
license = "MIT"
description = "A formatter for plantuml source code."
repository = "https://github.com/huleiak47/pumlformat"
keywords = ["plantuml", "formatter"]
rust-version = "1.85"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
fancy-regex = "0.14"
anyhow = "1.0.64"
log = "0.4.26"
env_logger = "0.11.6"

[profile.release]
strip = true
